plugins {
    id 'java'
    id 'maven-publish'
    id("com.gradleup.shadow") version "9.0.0-beta8"
}

apply plugin: 'java'

def group = 'me.theparanker.customcurrency'
def artifact = 'CustomCurrency'
def version = '1.0.0'

java {
    toolchain.languageVersion.set(JavaLanguageVersion.of(21))
}

tasks.withType(Test).configureEach {
    jvmArgs += '--enable-preview'
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += ['--enable-preview', '-Xlint:unchecked']
    options.release = 21
}

repositories {
    mavenCentral()

    maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
    maven { url 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/' }
    maven { url 'https://repo.codemc.io/repository/maven-releases/' }
    maven { url 'https://repo.codemc.io/repository/maven-snapshots/' }
    maven { url 'https://repo.extendedclip.com/releases/' }
    maven { url "https://repo.flyte.gg/releases" }
    maven {
        url 'https://jitpack.io'
        credentials {
            username 'AUTH'
            password project.findProperty("jitpack") ?: ""
        }
    }
}

dependencies {
    compileOnly fileTree(dir: 'libs', include: ['*.jar'])

    compileOnly 'org.spigotmc:spigot-api:1.21.1-R0.1-SNAPSHOT'

    compileOnly 'com.zaxxer:HikariCP:7.0.2'
    compileOnly 'org.mariadb.jdbc:mariadb-java-client:3.5.5'

    compileOnly 'org.projectlombok:lombok:1.18.36'
    annotationProcessor 'org.projectlombok:lombok:1.18.36'

    implementation 'net.kyori:adventure-text-serializer-legacy:4.20.0'

    compileOnly 'me.clip:placeholderapi:2.11.6'

    compileOnly "com.github.MilkBowl:VaultAPI:1.7"

    implementation 'com.github.theparanker:utilslib:v1.1.0'
    implementation 'com.github.theparanker:manager-service:v1.0.1'

    implementation "org.mclicense:library:1.4.7"
}

tasks {
    compileJava {
        dependsOn clean
        options.encoding = 'UTF-8'
    }

    build {
        dependsOn publish
        dependsOn shadowJar
    }
}

jar.enabled = false

shadowJar {
    archiveFileName = "${artifact}-${version}.jar"
    destinationDirectory = file("$buildDir/libs")
}


jar {
    archiveFileName = "${artifact}-${version}.jar"
}


processResources {
    filteringCharset 'UTF-8'
    def commitId = 'git rev-parse --short HEAD'.execute().text.trim()
    expand 'GIT_COMMIT_HASH': commitId
}

publishing {
    publications {
        maven(MavenPublication) {
            groupId = group
            artifactId = artifact

            from components.java
        }
    }
}